# suitespotauth

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
suitespotauth/: __init__.py  auth.py  configure.py  credentials.py  exceptions.py
